--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1",
+    "@chakra-ui/react": "^1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "axios": "^1.4.0",
     "browserslist": "^4.21.0",
     "caniuse-lite": "^1.0.30001517",
+    "framer-motion": "^6",
     "jwt-decode": "^3.1.2",
     "next": "12.1.0",
     "nookies": "^2.5.2",
