--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.10.1",
+    "react-image-marker": "^1.2.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.49.7",
     "update-browserslist-db": "^1.0.11"
