--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "@chakra-ui/react": "^1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
+    "@mui/x-data-grid": "^4.0.0",
     "axios": "^1.4.0",
     "browserslist": "^4.21.0",
     "caniuse-lite": "^1.0.30001517",
