--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-pizzaria",
   "version": "1.0.0",
   "scripts": {
-    "dev": "concurrently \"cd backend && yarn dev\" \"cd frontend && yarn dev\"",
-    "install-deps": "cd backend && yarn install && cd ../frontend && yarn install"
+    "install-deps": "yarn global add concurrently && cd backend && yarn install && cd ../frontend && yarn install",
+    "dev": "concurrently \"cd backend && yarn dev\" \"cd frontend && yarn dev\""
   }
 }
