--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/styles": "^4.11.5",
     "@mui/x-data-grid": "^4.0.0",
+    "@types/pdfmake": "^0.2.8",
     "axios": "^1.4.0",
     "browserslist": "^4.21.0",
     "caniuse-lite": "^1.0.30001517",
+    "date-fns": "^2.30.0",
     "framer-motion": "^6",
     "jwt-decode": "^3.1.2",
     "next": "12.1.0",
     "nookies": "^2.5.2",
+    "pdfmake": "^0.2.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.10.1",
