--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,11 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^6",
     "jwt-decode": "^3.1.2",
-    "next": "12.1.0",
+    "next": "^14.0.4",
     "nookies": "^2.5.2",
     "pdfmake": "^0.2.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-marker": "^1.2.0",
     "react-toastify": "^9.1.3",
@@ -36,9 +36,9 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
-    "@types/react": "^17.0.39",
+    "@types/react": "^18.2.47",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
-    "typescript": "^4.5.5"
+    "typescript": "^5.3.3"
   }
 }
