--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-marker": "^1.2.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.49.7",
     "update-browserslist-db": "^1.0.11"
