--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode/settings.json
 
 # yarn v2
 .yarn/cache
