--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-image-marker": "^1.2.0",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
+    "react-zoom-pan-pinch": "^3.4.2",
     "sass": "^1.49.7",
     "update-browserslist-db": "^1.0.11"
   },
